# fat-platform-demo

./: BUILD.bazel  README.md  WORKSPACE
rule/: rule.bzl
toolchain/: BUILD.bazel  toolchain.bzl
