package(default_visibility = ["//visibility:public"])

load(":toolchain.bzl", "sample_toolchain")

toolchain_type(name = "toolchain_type")

sample_toolchain(
    name = "sample_toolchain_linux_impl",
    message = "linux toolchain",
)

toolchain(
    name = "sample_toolchain_linux",
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = "sample_toolchain_linux_impl",
    toolchain_type = ":toolchain_type",
)

sample_toolchain(
    name = "sample_toolchain_windows_impl",
    message = "windows toolchain",
)

toolchain(
    name = "sample_toolchain_windows",
    target_compatible_with = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
    toolchain = "sample_toolchain_windows_impl",
    toolchain_type = ":toolchain_type",
)
